# zendriver-example

./: .env.example  .lefthook.yml  .tool-versions  README.md  mise.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_improvement.yml  feature_request.yml
.github/act/: pull_request.json
.github/workflows/: pr-checks.yml
scripts/: install.sh
src/: main.py
