[project]
name = "python-template"
version = "0.0.0"
description = "A basic GitHub repository template for Python projects"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # `one-blank-line-before-class` conflicts with `no-blank-line-before-class` (D211)
    "D213", # `multi-line-summary-second-line` conflicts with `multi-line-summary-first-line` (D212)
    "COM812", # `missing-trailing-comma` conflicts with formatter
]

[tool.isort]
profile = "black"
force_grid_wrap = 1
multi_line_output = 3
order_by_type = true
combine_as_imports = true
