[project]
name = "zendriver-example"
version = "0.1.0"
description = "Example demonstrating passive web scraping with Zendriver using Chrome DevTools Protocol"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "zendriver>=0.15.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201", # `print` we need print for demostrate tests
    "D203", # `one-blank-line-before-class` conflicts with `no-blank-line-before-class` (D211)
    "D213", # `multi-line-summary-second-line` conflicts with `multi-line-summary-first-line` (D212)
    "COM812", # `missing-trailing-comma` conflicts with formatter
]

[tool.isort]
profile = "black"
force_grid_wrap = 1
multi_line_output = 3
order_by_type = true
combine_as_imports = true
